--- a/Dark Mode/style/style.css
+++ b/Dark Mode/style/style.css
@@ -7,11 +7,14 @@
     font-family: 'Poppins', sans-serif;
 }
 
-html, body {
+html, 
+body {
     transition: 0.3s;
 }
 
-input[type='checkbox'], .bi-moon, .dark .bi-sun {
+input[type='checkbox'], 
+.bi-moon, .dark 
+.bi-sun {
     display: none;
 }
 
@@ -31,7 +34,8 @@ input[type='checkbox'], .bi-moon, .dark .bi-sun {
     background-color: #1b3c52;
 }
 
-i, .dark i:hover {
+i, 
+.dark i:hover {
     border: #4ba9e9 solid;    
     background-color: #4ba9e9;
 }
@@ -56,7 +60,8 @@ i:hover {
 
 
 /* dark theme */
-.dark, .dark header {
+.dark, 
+.dark header {
     background: linear-gradient(#1b3c52, #1b3c52 50%, rgb(88, 80, 80) 50%, rgb(88, 80, 80) 100%);
 }
 
@@ -247,7 +252,11 @@ body {
     border: 2px solid rgb(175, 165, 165);    
 }
 
-.dark .details h3, .dark .card .details .group a, .dark .card .details .group h2, .dark .details .size li, .dark .card .details h4, .dark .card .details p {
+.dark .details h3, 
+.dark .card .details .group a, 
+.dark .card .details .group h2, 
+.dark .details .size li, .dark .card .details h4, 
+.dark .card .details p {
     color: rgb(175, 165, 165);
 }
 
@@ -256,7 +265,8 @@ body {
     background: #fff;
 }
 
-.dark .card .details .group a:hover, .dark .card .details .size li:hover {
+.dark .card .details .group a:hover, 
+.dark .card .details .size li:hover {
     color:#1b3c52;
     background: #4ba9e9;    
 } 
